--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 # Backend documentation (temporary)
 *.pdf
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Sensitive configuration files
+config/secrets.json
